--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,7 +1,12 @@
 pytest==7.3.1
-apache-airflow-client==2.6.0
+apache-airflow-client==2.6.1
 testcontainers==3.7.1
-SQLAlchemy
-minio
-pyodbc==4.0.39
-apache-airflow==2.6.0
+SQLAlchemy==1.4.48
+minio==7.1.15
+SQLAlchemy-Utils==0.41.1
+psycopg2-binary==2.9.6
+apache-airflow==2.6.1
+alembic==1.11.0
+black
+mypy
+isort
