--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -7,6 +7,8 @@ SQLAlchemy-Utils==0.41.1
 psycopg2-binary==2.9.6
 apache-airflow==2.6.1
 alembic==1.11.0
-black
-mypy
-isort
+black==23.3.0
+mypy==1.3.0
+isort==5.12.0
+tox==4.6.0
+flake8==6.0.0
