--- a/tox.ini
+++ b/tox.ini
@@ -8,13 +8,12 @@ description = run unit tests
 deps =
     -r requirements-dev.txt
 allowlist_externals =
-    docker
+    docker-compose
     rm
 commands =
-    docker compose down -v
-    rm -rf tut-minio-data && mkdir tut-minio-data
+    docker-compose down -v
     rm -rf logs
-    docker compose build
+    docker-compose build
     pytest -vvv -s --log-cli-level=DEBUG tests/integration/test_ingestions.py
 
 [testenv:lint]
